--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongod": "^2.0.0",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.10",
@@ -29,6 +30,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
