--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "install": "^0.13.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongod": "^2.0.0",
@@ -28,6 +30,7 @@
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.10",
     "npm": "^11.7.0",
+    "pdfkit": "^0.17.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
