--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_API_KEY=your_api_key
 REACT_APP_BASE_URL=https://api.example.com
-PORT=5000
-MONGODB_URI="mongodb://127.0.0.1:27017/""
+PORT=5001
+MONGODB_URI="mongodb://127.0.0.1:27017/"
 JWT_SECRET="your_jwt_secret_key"
