--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: "3.8"
+version: '3.8'
 services:
   db:
     image: mongo:latest
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - mongodb_data_container:/data/db
 
   backend:
     build: ./backend
     ports:
-      - "5000:5000"
+      - '5000:5000'
     depends_on:
       - db
     environment:
@@ -24,11 +24,11 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - backend
     environment:
-      REACT_APP_BACKEND_URL: http://localhost:5000  # Adjust if needed
+      REACT_APP_BACKEND_URL: http://localhost:5000 # Adjust if needed
     volumes:
       - ./frontend:/app
       - /app/node_modules
